exports[`McpResponse > add network request when attached 1`] = `
## Request http://example.com
Status: pending
### Request Headers
- content-size:10
## Network requests
Showing 1-1 of 1 (Page 1 of 1).
reqid=1 GET http://example.com [pending]
`;

exports[`McpResponse > add network request when attached 2`] = `
{
  "networkRequest": {
    "requestId": 1,
    "method": "GET",
    "url": "http://example.com",
    "status": "pending",
    "requestHeaders": {
      "content-size": "10"
    }
  },
  "pagination": {
    "currentPage": 0,
    "totalPages": 1,
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startIndex": 0,
    "endIndex": 1,
    "invalidPage": false
  },
  "networkRequests": [
    {
      "requestId": 1,
      "method": "GET",
      "url": "http://example.com",
      "status": "pending",
      "selectedInDevToolsUI": false
    }
  ]
}
`;

exports[`McpResponse > add network request when attached with POST data 1`] = `
## Request http://example.com
Status: 200
### Request Headers
- content-size:10
### Request Body
{"request":"body"}
### Response Headers
- Content-Type:application/json
### Response Body
{"response":"body"}
## Network requests
Showing 1-1 of 1 (Page 1 of 1).
reqid=1 POST http://example.com [200]
`;

exports[`McpResponse > add network request when attached with POST data 2`] = `
{
  "networkRequest": {
    "requestId": 1,
    "method": "POST",
    "url": "http://example.com",
    "status": "200",
    "requestHeaders": {
      "content-size": "10"
    },
    "requestBody": "{\\"request\\":\\"body\\"}",
    "responseHeaders": {
      "Content-Type": "application/json"
    },
    "responseBody": "{\\"response\\":\\"body\\"}"
  },
  "pagination": {
    "currentPage": 0,
    "totalPages": 1,
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startIndex": 0,
    "endIndex": 1,
    "invalidPage": false
  },
  "networkRequests": [
    {
      "requestId": 1,
      "method": "POST",
      "url": "http://example.com",
      "status": "200",
      "selectedInDevToolsUI": false
    }
  ]
}
`;

exports[`McpResponse > add network requests when setting is true 1`] = `
## Network requests
Showing 1-2 of 2 (Page 1 of 1).
reqid=1 GET http://example.com [pending]
reqid=2 GET http://example.com [pending]
`;

exports[`McpResponse > add network requests when setting is true 2`] = `
{
  "pagination": {
    "currentPage": 0,
    "totalPages": 1,
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startIndex": 0,
    "endIndex": 2,
    "invalidPage": false
  },
  "networkRequests": [
    {
      "requestId": 1,
      "method": "GET",
      "url": "http://example.com",
      "status": "pending",
      "selectedInDevToolsUI": false
    },
    {
      "requestId": 2,
      "method": "GET",
      "url": "http://example.com",
      "status": "pending",
      "selectedInDevToolsUI": false
    }
  ]
}
`;

exports[`McpResponse > adds a message when no console messages exist 1`] = `
## Console messages
<no console messages found>
`;

exports[`McpResponse > adds a message when no console messages exist 2`] = `
{}
`;

exports[`McpResponse > adds console messages when the setting is true 1`] = `
## Console messages
Showing 1-1 of 1 (Page 1 of 1).
msgid=1 [log] Hello from the test (1 args)
`;

exports[`McpResponse > adds console messages when the setting is true 2`] = `
{
  "pagination": {
    "currentPage": 0,
    "totalPages": 1,
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startIndex": 0,
    "endIndex": 1,
    "invalidPage": false
  },
  "consoleMessages": [
    {
      "type": "log",
      "text": "Hello from the test",
      "argsCount": 1,
      "id": 1
    }
  ]
}
`;

exports[`McpResponse > does not include network requests when setting is false 1`] = `

`;

exports[`McpResponse > does not include network requests when setting is false 2`] = `
{}
`;

exports[`McpResponse > doesn't list the issue message if mapping returns null 1`] = `
{}
`;

exports[`McpResponse > returns correctly formatted snapshot for a simple tree 1`] = `
## Latest page snapshot
uid=1_0 RootWebArea "My test page" url="about:blank"
  uid=1_1 button "Click me" focusable focused
  uid=1_2 textbox value="Input"

`;

exports[`McpResponse > returns correctly formatted snapshot for a simple tree 2`] = `
{
  "snapshot": {
    "id": "1_0",
    "role": "RootWebArea",
    "name": "My test page",
    "url": "about:blank",
    "children": [
      {
        "id": "1_1",
        "role": "button",
        "name": "Click me",
        "focusable": true,
        "focused": true
      },
      {
        "id": "1_2",
        "role": "textbox",
        "value": "Input"
      }
    ]
  }
}
`;

exports[`McpResponse > returns values for textboxes 1`] = `
## Latest page snapshot
uid=1_0 RootWebArea "My test page" url="about:blank"
  uid=1_1 StaticText "username"
  uid=1_2 textbox "username" focusable focused value="mcp"

`;

exports[`McpResponse > returns values for textboxes 2`] = `
{
  "snapshot": {
    "id": "1_0",
    "role": "RootWebArea",
    "name": "My test page",
    "url": "about:blank",
    "children": [
      {
        "id": "1_1",
        "role": "StaticText",
        "name": "username"
      },
      {
        "id": "1_2",
        "role": "textbox",
        "name": "username",
        "focusable": true,
        "focused": true,
        "value": "mcp"
      }
    ]
  }
}
`;

exports[`McpResponse > returns verbose snapshot and structured content 1`] = `
## Latest page snapshot
uid=1_0 RootWebArea "My test page" url="about:blank"
  uid=1_1 ignored
    uid=1_2 ignored
      uid=1_3 complementary
        uid=1_4 StaticText "test"
          uid=1_5 InlineTextBox "test"

`;

exports[`McpResponse > returns verbose snapshot and structured content 2`] = `
{
  "snapshot": {
    "id": "1_0",
    "role": "RootWebArea",
    "name": "My test page",
    "url": "about:blank",
    "children": [
      {
        "id": "1_1",
        "role": "none",
        "children": [
          {
            "id": "1_2",
            "role": "none",
            "children": [
              {
                "id": "1_3",
                "role": "complementary",
                "children": [
                  {
                    "id": "1_4",
                    "role": "StaticText",
                    "name": "test",
                    "children": [
                      {
                        "id": "1_5",
                        "role": "InlineTextBox",
                        "name": "test"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`McpResponse > saves snapshot to file and returns structured content 1`] = `
Saved snapshot to <file>
`;

exports[`McpResponse > saves snapshot to file and returns structured content 2`] = `
{
  "snapshotFilePath": "<file>"
}
`;

exports[`McpResponse > saves snapshot to file and returns structured content 3`] = `
uid=1_0 RootWebArea "My test page" url="about:blank"
  uid=1_1 ignored
    uid=1_2 ignored
      uid=1_3 complementary
        uid=1_4 StaticText "test"
          uid=1_5 InlineTextBox "test"

`;
